--- a/frontend/src/styles/Note.module.css
+++ b/frontend/src/styles/Note.module.css
@@ -1,2 +1,11 @@
 .noteCard {
+    background:cornsilk ;
+}
+.cardBody{
+    overflow: hidden;
+    mask-image: linear-gradient(180deg, #000 60%, transparent);
+}
+.cardText{
+
+    white-space: pre-line;
 }
