ajout de la fonction deleteNote,updateNote  et modification du fichier AddNotedialog

--- a/frontend/src/styles/Note.module.css
+++ b/frontend/src/styles/Note.module.css
@@ -1,11 +1,18 @@
 .noteCard {
-    background:cornsilk ;
+  background: cornsilk;
 }
-.cardBody{
-    overflow: hidden;
-    mask-image: linear-gradient(180deg, #000 60%, transparent);
+.cardBody {
+  overflow: hidden;
+  mask-image: linear-gradient(180deg, #000 60%, transparent);
 }
-.cardText{
+.cardText {
+  white-space: pre-line;
+}
 
-    white-space: pre-line;
+.cardTitle {
+  display: flex;
+  align-items: center;
+
+  justify-content: space-between;
+  width: 100%;
 }
