--- a/frontend/src/styles/NotesPage.module.css
+++ b/frontend/src/styles/NotesPage.module.css
@@ -1,10 +1,19 @@
-.note{
-    height: 200px !important;
-    min-width: 150px !important;
-    transition: box-shadow .2s ease-in-out !important;
-    cursor: pointer;
+.notesPage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.note:hover{
-    box-shadow:  0px 6px 24px 0px rgba(0,0,0,0.05), 
-    0px 0px 0px 1px rgba(0,0,0,0.08);
+.notesGrig {
+  width: 100%;
+}
+
+.note {
+  height: 200px !important;
+  min-width: 150px !important;
+  transition: box-shadow 0.2s ease-in-out !important;
+  cursor: pointer;
+}
+.note:hover {
+  box-shadow: 0px 6px 24px 0px rgba(0, 0, 0, 0.05),
+    0px 0px 0px 1px rgba(0, 0, 0, 0.08);
 }
